# ro-Start

./: .gitignore  .prettierignore  BUILD_FIX.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CRITICAL_FIXES.md  Cargo.toml  Dockerfile  ERROR_PREVENTION.md  GITHUB_READY.md  IMPROVEMENTS_COMPLETE.md  INSTALL.md  MANIFEST.in  PRODUCTION_READY.md  PROJECT_COMPLETE.md  PROJECT_STRUCTURE.md  README.md  README.tr.md  SECURITY.md  build.sh  check_syntax.py  deneme.py  install.sh  org.osdev.ro_start.appdata.xml  org.osdev.ro_start.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  ro-start.desktop  uninstall.sh
.githooks/: pre-commit
.github/: FUNDING.yml  REPO_SETTINGS.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: build-deb.yml  build-release.yml  build-rpm.yml  ci.yml  release.yml  rust.yml
assets/locales/: de.json  en_US.json  es.json  fr.json  it.json  ja.json  ru.json  tr_TR.json  zh.json
backend/: main.py
backend/api/: middleware.py
backend/core/: autostart.py  config.py  exceptions.py  i18n.py  logger.py  security.py  sys_info.py
backend/ui/: main_window.py
backend/ui/pages/: drivers.py  home.py  software.py  update.py
configs/: app.json  distros.yaml
data/: org.osdev.ro_start.appdata.xml  ro-start-autostart.desktop  ro-start.desktop
debian/: changelog  control  copyright  rules
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  FULL_PROFESSIONAL_COMPLETE.md  I18N_COMPLETE.md  IMPROVEMENTS.md  INSTALL.md  MISSING_FEATURES.md  PACKAGING.md  RELEASE_CHECKLIST.md  ro-start.1
frontend/: App.tsx  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/components/: WelcomeScreen.tsx
frontend/components/steps/: AppSuggestionsStep.tsx  DriverUpdatesStep.tsx  ReadyStep.tsx  SystemUpdatesStep.tsx  WelcomeStep.tsx
frontend/config/: locales.ts  welcome-config.ts
packaging/: PKGBUILD  flatpak.yml  ro-start.spec
packaging/completions/: ro-start.bash  ro-start.fish  ro-start.zsh
packaging/scripts/: build.sh  clean.sh  install.sh  uninstall.sh
resources/: style.css  welcome-screen.desktop
scripts/: build.sh  build_deb.sh  build_deb_orbstack.sh  check-syntax.sh  clean.sh  install.sh  pre-commit  uninstall.sh
src/: config.rs  error.rs  i18n.rs  main.py  main.rs  notifications.rs  package_manager.rs  system.rs
src/core/: autostart.py  i18n.py  sys_info.py
src/ui/: about.rs  dialogs.rs  main_window.py  main_window.rs  mod.rs  settings.rs
src/ui/pages/: drivers.py  home.py  software.py
tema/: App.tsx  Attributions.md  package-lock.json  package.json  tailwind.config.js
tema/components/: WelcomeScreen.tsx
tema/components/steps/: AppSuggestionsStep.tsx  DriverUpdatesStep.tsx  ReadyStep.tsx  SystemUpdatesStep.tsx  WelcomeStep.tsx
tema/config/: locales.ts  welcome-config.ts
tema/styles/: globals.css
tests/backend/: __init__.py  test_autostart.py  test_i18n.py  test_sys_info.py
tests/frontend/: README.md
