[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ro-start"
version = "1.1.0"
description = "Linux için modern, hibrit yapılı karşılama ekranı."
authors = [
  { name="Emir", email="emir@osdev.shop" },
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "PyQt6",
    "PyQt6-WebEngine",
    "psutil",
    "darkdetect",
    "platformdirs"
]

[project.scripts]
ro-start = "src.main:main"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.black]
line-length = 120
target-version = ['py310']
