[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ro-start"
version = "1.1.0"
description = "Modern welcome application for Linux distributions"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Acik Kaynak Gelistirme Toplulugu", email = "info@osdev.shop"}
]
keywords = ["linux", "welcome", "onboarding", "system-management"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "PyQt6>=6.4.0",
    "PyQt6-WebEngine>=6.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/Acik-Kaynak-Gelistirme-Toplulugu/ro-start"
Repository = "https://github.com/Acik-Kaynak-Gelistirme-Toplulugu/ro-start"
Issues = "https://github.com/Acik-Kaynak-Gelistirme-Toplulugu/ro-start/issues"
Documentation = "https://repo.osdev.shop/docs"

[project.scripts]
ro-start = "backend.main:main"

[tool.setuptools]
packages = ["backend", "backend.core", "backend.ui", "backend.api"]

[tool.setuptools.package-data]
backend = ["../frontend/dist/**/*", "../configs/**/*", "../assets/**/*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
